--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
+    "lint": "eslint --fix",
     "build": "tsc && vite build",
     "preview": "vite preview --host"
   },
