support convert data to locales as i18n backend

--- a/raw/card/citi_cash_back.yaml
+++ b/raw/card/citi_cash_back.yaml
@@ -35,6 +35,7 @@ rebateList:
     categories:
       include:
         - restaurant
+        - fastfood
         - hotel
     channel:
       online: false
