--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "packageManager": "bun@1.2.5",
   "scripts": {
     "dev": "vite --host",
     "lint": "eslint --fix",
     "build": "tsc && vite build",
-    "preview": "vite preview --host"
+    "preview": "vite preview --host",
+    "prepare": "simple-git-hooks"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "bun lint-staged --verbose"
+  },
+  "lint-staged": {
+    "*": "bun lint"
   },
   "dependencies": {
     "lodash": "^4.17.21",
@@ -24,7 +32,9 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
     "globals": "^16.0.0",
+    "lint-staged": "^15.5.0",
     "sharp": "^0.33.5",
+    "simple-git-hooks": "^2.11.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.0",
     "vite": "^6.2.0",
