--- a/raw/options/categories.yaml
+++ b/raw/options/categories.yaml
@@ -22,7 +22,7 @@ content:
   transportation:
     en: 'Transportation'
     zh: '交通'
-  sportwear:
+  sportswear:
     en: 'Sportswear'
     zh: '運動服飾'
   fitness:
