--- a/raw/options/shops.yaml
+++ b/raw/options/shops.yaml
@@ -39,7 +39,7 @@ content:
       mcl: MCL Cinema
       cityline: Cityline 購票通
   # transportation
-  # sportwear
+  # sportswear
   - fitness: # dbs eminent
       beEarth: Be Earth
       pureGroup: PURE Group
